# conc

./: .clang-format  .clang-tidy  .gitignore  Cargo.toml  Makefile  README.md  conc.service.example  flake.nix  install.sh
apps/cli/: Cargo.toml  Makefile  conc.json  install.sh
apps/cli/src/: config.rs  main.rs  output.rs  process.rs  utils.rs
apps/cli/src/interactive/: external_command.rs  keybind_utils.rs  mod.rs  tui_settings.rs
apps/cli/src/interactive/components/: active_table.rs  common_block.rs  input.rs  mod.rs
apps/cli/src/interactive/pages/: keybinds_page.rs  mod.rs  project_page.rs  projects_page.rs
apps/daemon/: .gitignore  Makefile  README.md  install.sh
apps/daemon/src/: app-config.c  app-config.h  driver.c  driver.h  main.c  manager.c  manager.h  process.c  process.h  protocol.c  protocol.h  settings.c  settings.h  socket-server.c  socket-server.h
apps/daemon/src/utils/: fs.c  fs.h  string.h  thread-pool.c  thread-pool.h  vector.c  vector.h
apps/daemon/tests/: Makefile  expect.h  main.c
apps/daemon/tests/utils/: fs-tests.c  fs-tests.h  string-tests.c  string-tests.h  thread-pool.c  thread-pool.h  vector-tests.c  vector-tests.h
apps/gui/: Cargo.toml  Makefile  install.sh
apps/gui/src/: main.rs  message.rs
apps/gui/src/components/: action_buttons.rs  layout.rs  menu.rs  mod.rs  status_bar.rs  table.rs  title.rs
apps/gui/src/pages/: mod.rs  project_page.rs  projects_page.rs  service_page.rs  settings_page.rs
apps/gui/src/utils/: mod.rs
crates/app-config/: Cargo.toml
crates/app-config/src/: lib.rs
crates/daemon-client/: Cargo.toml
crates/daemon-client/src/: lib.rs  requester.rs  socket_client.rs
crates/daemon-client/src/extensions/: mod.rs  responses.rs
crates/daemon-client/src/models/: mod.rs  requests.rs  responses.rs
crates/project-settings/: Cargo.toml
crates/project-settings/src/: lib.rs
examples/basic/: README.md  conc.json
src/: app-config.c  app-config.h  driver.c  driver.h  main.c  manager.c  manager.h  process.c  process.h  protocol.c  protocol.h  settings.c  settings.h  socket-server.c  socket-server.h
src/utils/: fs.c  fs.h  log.c  log.h  string.c  string.h  thread-pool.c  thread-pool.h  threading.c  threading.h  time.c  time.h  vector.c  vector.h
(+3 files in other folders)
