[workspace]
members = ["apps/*", "crates/*"]
exclude = ["apps/daemon"]
resolver = "2"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[workspace.dependencies]
# local crates
daemon-client = { path = "./crates/daemon-client", version = "0.1.0" }
project-settings = { path = "./crates/project-settings", version = "0.1.0" }
app-config = { path = "./crates/app-config", version = "0.1.0" }
