[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.64"
ratatui = "0.29.0"
crossterm = "0.28.1"
color-eyre = "0.6.3"
strum = "0.26.3"
# local crates
daemon-client.workspace = true
project-settings.workspace = true
app-config.workspace = true
