[package]
name = "concc"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "1.0.69"
ratatui = "0.29.0"
crossterm = "0.28.1"
color-eyre = "0.6.5"
strum = "0.26.3"
rev_buf_reader = "0.3.0"
# local crates
daemon-client.workspace = true
project-settings.workspace = true
app-config.workspace = true
ansi-to-tui = "7.0.0"
