[package]
name = "gui"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.13.1", features = ["tokio", "debug", "advanced"] }
tokio = { version = "1.40.0", features = ["tracing", "time"] }
chrono = "0.4.38"
tracing-subscriber = "0.3.18"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
# local crates
daemon-client.workspace = true
project-settings.workspace = true
app-config.workspace = true
